# Dark-Subnet

./: .gitignore  Dockerfile  PITCH_DECK.md  README.md  TESTNET_GUIDE.md  demo.py  demo_mock.py  docker-compose.yml  pyproject.toml  requirements.txt  run_docker.bat  run_simulation.py
client/: __init__.py  oracle.py
fhe_models/: __init__.py  train_model.py
neurons/: __init__.py  miner.py  validator.py
protocol/: __init__.py  synapse.py
scripts/: run_miner_testnet.bat  run_validator_testnet.bat  setup_testnet.bat  setup_testnet.sh
tests/: test_fhe_model.py  test_synapse.py
